Archive2/16/944ebf86c69848/output
main.cpp:3:1: error: 'color' does not name a type
 color col;
 ^
main.cpp:5:1: error: 'boolean' does not name a type
 boolean isExist = false;
 ^
main.cpp: In function 'void setup()':
main.cpp:9:16: error: 'size' was not declared in this scope
   size(400, 200);
                ^
main.cpp:10:12: error: 'noStroke' was not declared in this scope
   noStroke();
            ^
main.cpp: In function 'void draw()':
main.cpp:15:3: error: 'final' was not declared in this scope
   final float accel = 0.5;
   ^
main.cpp:16:9: error: expected ';' before 'int'
   final int radius = 10;
         ^
main.cpp:17:9: error: expected ';' before 'float'
   final float alpha = -0.8;
         ^
main.cpp:19:17: error: 'background' was not declared in this scope
   background(255);
                 ^
main.cpp:21:7: error: 'isExist' was not declared in this scope
   if (isExist)
       ^
main.cpp:23:10: error: 'col' was not declared in this scope
     fill(col);
          ^
main.cpp:23:13: error: 'fill' was not declared in this scope
     fill(col);
             ^
main.cpp:24:31: error: 'radius' was not declared in this scope
     ellipse(x_coord, y_coord, radius * 2, radius * 2);
                               ^
main.cpp:24:53: error: 'ellipse' was not declared in this scope
     ellipse(x_coord, y_coord, radius * 2, radius * 2);
                                                     ^
main.cpp:26:27: error: 'height' was not declared in this scope
     if (y_coord + speed < height - radius)
                           ^
main.cpp:29:16: error: 'accel' was not declared in this scope
       speed += accel;
                ^
main.cpp:34:16: error: 'alpha' was not declared in this scope
       speed *= alpha;
                ^
main.cpp: In function 'void mouseClicked()':
main.cpp:41:13: error: 'mouseX' was not declared in this scope
   x_coord = mouseX;
             ^
main.cpp:42:13: error: 'mouseY' was not declared in this scope
   y_coord = mouseY;
             ^
main.cpp:44:3: error: 'col' was not declared in this scope
   col = int(random(0, 0xffffff)) | 0xff000000;
   ^
main.cpp:44:31: error: 'random' was not declared in this scope
   col = int(random(0, 0xffffff)) | 0xff000000;
                               ^
main.cpp:45:3: error: 'isExist' was not declared in this scope
   isExist = true;
   ^
